--- a/Project.html
+++ b/Project.html
@@ -377,8 +377,7 @@
      	});
 
      	var object ={'Spaghetti':11,'Pizza':15,'Pasta e fagioli':9,'Minestrone':9,'Risotto':8,'Cacciucco':13,
-     			'Couscous':16,'Ojja':11,'plat tunisien':8,'Cappuccino':8,'Hot Chocolate':9,'Caffe Latte':8,'Jus':11,'Tea':5,'Croissant':3;
-
+     			'Couscous':16,'Ojja':11,'plat tunisien':8,'Cappuccino':8,'Hot Chocolate':9,'Caffe Latte':8,'Jus':11,'Tea':5,'Croissant':3
      	}
 
 	</script>
